syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message GenerateTokenRequest {
  string user_id = 1;
  Role role = 2;
}

message GenerateTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  Role role = 2;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ADMIN = 1;
  USER = 2;
}